Installed Tailwind, tested homepage,works

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,24 +2,46 @@
 
 <!doctype html>
 <html lang="en">
-<head>
-    {% load tailwind_tags %}
-    {% tailwind_css %}
-</head>
+  {% load tailwind_tags %}
+  ...
+  <head>
+     ...visible immediately
+     {% tailwind_css %}
+    some tags for tailwind here
+
+  </head>
 <body>
     <main>
         <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl">
             <div class="md:flex">
               <div class="md:shrink-0">
-                <img class="h-48 w-full object-cover md:h-full md:w-48" src="/img/building.jpg" alt="Modern building architecture">
+                <img class="h-48 w-full object-cover md:h-full md:w-48" src="#" alt="Modern building architecture">
               </div>
               <div class="p-8">
                 <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Company retreats</div>
                 <a href="#" class="block mt-1 text-lg leading-tight font-medium text-black hover:underline">Incredible accommodation for your team</a>
                 <p class="mt-2 text-slate-500">Looking to take your team away on a retreat to enjoy awesome food and take in some sunshine? We have a list of places to do just that.</p>
               </div>
+              <h1>this is ITTT</h1>
             </div>
           </div>
+
+          <hr>
+          <title>Django Tailwind</title>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0">
+          <meta http-equiv="X-UA-Compatible" content="ie=edge">
+          {% tailwind_css %}
+        </head>
+      
+        <body class="bg-gray-50 font-serif leading-normal tracking-normal">
+          <div class="container mx-auto">
+            <section class="flex items-center justify-center h-screen">
+              <h1 class="text-5xl">Django + Tailwind = ❤️</h1>
+            </section>
+          </div>
+        </body>
+      </html>
     </main>
 </body>
 <footer>
