--- a/templates/base.html
+++ b/templates/base.html
@@ -3,46 +3,184 @@
 <!doctype html>
 <html lang="en">
   {% load tailwind_tags %}
-  ...
   <head>
-     ...visible immediately
-     {% tailwind_css %}
-    some tags for tailwind here
-
+     <title>Piggy Bank</title>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="icon" type="image/png" href="{{ MEDIA_URL }} favicon.png">
   </head>
 <body>
-    <main>
-        <div class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl">
-            <div class="md:flex">
-              <div class="md:shrink-0">
-                <img class="h-48 w-full object-cover md:h-full md:w-48" src="#" alt="Modern building architecture">
+  {% tailwind_css %}
+  <div class="bg-white">
+    <header>
+      <div class="relative bg-white">
+        <div class="mx-auto flex max-w-7xl items-center justify-between py-6 px-6 md:justify-start md:space-x-10 lg:px-8">
+          <div class="flex justify-start lg:w-0 lg:flex-1">
+            <a href="#">
+              <img class="h-8 w-auto sm:h-10" src="media/favicon2.png" alt="logo" >
+            </a>
+            <span class="mt-2 ml-5 text-lg">Piggy Bank</span>
+          </div>
+          <div class="-my-2 -mr-2 md:hidden">
+            <button type="button" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-expanded="false">
+              <span class="sr-only">Open menu</span>
+              <!-- Heroicon name: outline/bars-3 -->
+              <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+              </svg>
+            </button>
+          </div>
+          <nav class="hidden space-x-10 md:flex">
+            <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">Home</a>
+  
+            <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">About</a>
+
+            <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">Pricing</a>
+  
+            <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">Contact</a>
+          </nav>
+          <div class="hidden items-center justify-end md:flex md:flex-1 lg:w-0">
+            <a href="#" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Sign in</a>
+            <a href="#" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Sign up</a>
+          </div>
+        </div>
+  
+        <!--
+          Mobile menu, show/hide based on mobile menu state.
+  
+          Entering: "duration-200 ease-out"
+            From: "opacity-0 scale-95"
+            To: "opacity-100 scale-100"
+          Leaving: "duration-100 ease-in"
+            From: "opacity-100 scale-100"
+            To: "opacity-0 scale-95"
+        -->
+        <div class="absolute inset-x-0 top-0 z-30 origin-top-right transform p-2 transition md:hidden">
+          <div class="divide-y-2 divide-gray-50 rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5">
+            <div class="px-5 pt-5 pb-6">
+              <div class="flex items-center justify-between">
+                <div>
+                  <img class="h-8 w-auto" src="media/piggy-bank.jpg" alt="piggy-bank">
+                </div>
+                <div class="-mr-2">
+                  <button type="button" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+                    <span class="sr-only">Close menu</span>
+                    <!-- Heroicon name: outline/x-mark -->
+                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                    </svg>
+                  </button>
+                </div>
               </div>
-              <div class="p-8">
-                <div class="uppercase tracking-wide text-sm text-indigo-500 font-semibold">Company retreats</div>
-                <a href="#" class="block mt-1 text-lg leading-tight font-medium text-black hover:underline">Incredible accommodation for your team</a>
-                <p class="mt-2 text-slate-500">Looking to take your team away on a retreat to enjoy awesome food and take in some sunshine? We have a list of places to do just that.</p>
+              <div class="mt-6">
+                <nav class="grid grid-cols-1 gap-7">
+                  <a href="#" class="-m-3 flex items-center rounded-lg p-3 hover:bg-gray-50">
+                    <div class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-md bg-indigo-600 text-white">
+                      <!-- Heroicon name: outline/inbox -->
+                      <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 13.5h3.86a2.25 2.25 0 012.012 1.244l.256.512a2.25 2.25 0 002.013 1.244h3.218a2.25 2.25 0 002.013-1.244l.256-.512a2.25 2.25 0 012.013-1.244h3.859m-19.5.338V18a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 00-2.15-1.588H6.911a2.25 2.25 0 00-2.15 1.588L2.35 13.177a2.25 2.25 0 00-.1.661z" />
+                      </svg>
+                    </div>
+                    <div class="ml-4 text-base font-medium text-gray-900">Home</div>
+                  </a>
+  
+                  <a href="#" class="-m-3 flex items-center rounded-lg p-3 hover:bg-gray-50">
+                    <div class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-md bg-indigo-600 text-white">
+                      <!-- Heroicon name: outline/chat-bubble-bottom-center-text -->
+                      <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 01.865-.501 48.172 48.172 0 003.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
+                      </svg>
+                    </div>
+                    <div class="ml-4 text-base font-medium text-gray-900">About</div>
+                  </a>
+
+                  <a href="#" class="-m-3 flex items-center rounded-lg p-3 hover:bg-gray-50">
+                    <div class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-md bg-indigo-600 text-white">
+                      <!-- Heroicon name: outline/chat-bubble-bottom-center-text -->
+                      <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 01.865-.501 48.172 48.172 0 003.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
+                      </svg>
+                    </div>
+                    <div class="ml-4 text-base font-medium text-gray-900">Pricing</div>
+                  </a>
+  
+                  <a href="#" class="-m-3 flex items-center rounded-lg p-3 hover:bg-gray-50">
+                    <div class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-md bg-indigo-600 text-white">
+                      <!-- Heroicon name: outline/chat-bubble-left-right -->
+                      <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 8.511c.884.284 1.5 1.128 1.5 2.097v4.286c0 1.136-.847 2.1-1.98 2.193-.34.027-.68.052-1.02.072v3.091l-3-3c-1.354 0-2.694-.055-4.02-.163a2.115 2.115 0 01-.825-.242m9.345-8.334a2.126 2.126 0 00-.476-.095 48.64 48.64 0 00-8.048 0c-1.131.094-1.976 1.057-1.976 2.192v4.286c0 .837.46 1.58 1.155 1.951m9.345-8.334V6.637c0-1.621-1.152-3.026-2.76-3.235A48.455 48.455 0 0011.25 3c-2.115 0-4.198.137-6.24.402-1.608.209-2.76 1.614-2.76 3.235v6.226c0 1.621 1.152 3.026 2.76 3.235.577.075 1.157.14 1.74.194V21l4.155-4.155" />
+                      </svg>
+                    </div>
+                    <div class="ml-4 text-base font-medium text-gray-900">Contact</div>
+                  </a>
+                </nav>
               </div>
-              <h1>this is ITTT</h1>
+            </div>
+            <div class="py-6 px-5">
+              <div class="grid grid-cols-2 gap-4">
+                <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">Home</a>
+  
+                <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">About</a>
+
+                <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">Pricing</a>
+      
+                <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">Contact</a>
+              </div>
+              <div class="mt-6">
+                <a href="#" class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Sign up</a>
+                <p class="mt-6 text-center text-base font-medium text-gray-500">
+                  Existing customer?
+                  <a href="#" class="text-gray-900">Sign in</a>
+                </p>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+    </header>
+  
+    <main>
+      <div>
+        <!-- Hero card -->
+        <div class="relative">
+          <div class="absolute inset-x-0 bottom-0 h-full bg-gray-100"></div>
+          <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+            <div class="relative shadow-xl sm:overflow-hidden sm:rounded-2xl">
+              <div class="absolute inset-0">
+                <img class="h-full w-full object-cover" src="media/piggy-bank.jpg" alt="logo">
 
-          <hr>
-          <title>Django Tailwind</title>
-          <meta charset="UTF-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <meta http-equiv="X-UA-Compatible" content="ie=edge">
-          {% tailwind_css %}
-        </head>
-      
-        <body class="bg-gray-50 font-serif leading-normal tracking-normal">
-          <div class="container mx-auto">
-            <section class="flex items-center justify-center h-screen">
-              <h1 class="text-5xl">Django + Tailwind = ❤️</h1>
-            </section>
+              </div>
+              <div class="relative py-16 px-6 sm:py-24 lg:py-32 lg:px-8">
+                <h1 class="text-center text-4xl font-bold tracking-tight sm:text-5xl lg:text-6xl">
+                  <span class="block text-white">Piggy Bank</span>
+                  <span class="block text-indigo-200 mt-5">A Safe Way to Save</span>
+                </h1>
+                <p class="mx-auto mt-6 max-w-lg text-center text-xl text-indigo-200 sm:max-w-3xl">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+                <div class="mx-auto mt-10 max-w-sm sm:flex sm:max-w-none sm:justify-center">
+                  <div class="space-y-4 sm:mx-auto sm:inline-grid sm:grid-cols-2 sm:gap-5 sm:space-y-0">
+                    <a href="#" class="flex items-center justify-center rounded-md border border-transparent bg-white px-4 py-3 text-base font-medium text-indigo-700 shadow-sm hover:bg-indigo-50 sm:px-8">Get started</a>
+                    <a href="#" class="flex items-center justify-center rounded-md border border-transparent bg-indigo-500 bg-opacity-60 px-4 py-3 text-base font-medium text-white shadow-sm hover:bg-opacity-70 sm:px-8">Live demo</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-        </body>
-      </html>
+        </div>
+      </div>
+  
+      <!-- More main page content here... -->
     </main>
+  </div>
+    {% block page_header %}
+      
+    {% endblock %}
+
+    {% block content %}
+
+    {% endblock %}
+    <footer>
+    </footer>
 </body>
 <footer>
 </footer>
