--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
   
             <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">About</a>
 
-            <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">Pricing</a>
+            <a href="{% url 'account' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">Pricing</a>
   
             <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">Contact</a>
           </nav>
