Create wallet model and migrate

--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -2,6 +2,6 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="text-danger">Account page</h1>
+    <h1 class="text-red-600">Account page</h1>
     {{ account }}
 {% endblock %}
