--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -4,4 +4,5 @@
 {% block content %}
     <h1 class="text-red-600">Account page</h1>
     {{ account }}
+    <a href="{% url 'wallet' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">Wallet</a>
 {% endblock %}
