--- a/account/templates/account/wallet.html
+++ b/account/templates/account/wallet.html
@@ -4,4 +4,5 @@
 {% block content %}
     <h1 class="text-green-600">Wallet page</h1>
     {{ account }}
+    <a href="{% url 'category' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">Category</a>
 {% endblock %}
