Create transaction model, basic view, urls, basic template and migrate

--- a/account/templates/account/category.html
+++ b/account/templates/account/category.html
@@ -4,5 +4,5 @@
 {% block content %}
     <h1 class="text-blue-600">Category page</h1>
     {{ account }}
-    <!-- <a href="{% url 'category' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">Category</a> -->
+    <a href="{% url 'transaction' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">Transaction</a>
 {% endblock %}
