Add color scheme palette and user stories.

--- a/home/templates/home/team.html
+++ b/home/templates/home/team.html
@@ -183,7 +183,7 @@
                   <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="https://images.unsplash.com/photo-1519345182560-3f2917c472ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80" alt="lauren">
                   <div class="space-y-2 xl:flex xl:items-center xl:justify-between">
                     <div class="space-y-1 text-lg font-medium leading-6">
-                      <h3 class="text-white">Laruen Pechey</h3>
+                      <h3 class="text-white">Lauren Pechey</h3>
                       <p class="text-indigo-400">Documentation and Wireframes</p>
                     </div>
       
