--- a/profiles/templates/profile.html
+++ b/profiles/templates/profile.html
@@ -17,9 +17,9 @@
 Profile page
 {% user_display user as username %}
 <h2>My Profile - {{user.username|title}}</h2>
-<form class="mt-3 w-75" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+<form class="mt-3 w-75" action="#" method="POST" id="profile-update-form">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <button class="btn rounded text-uppercase float-right btn__update_rev">Update Information</button>
 </form>
 {% endblock %}
