Test models after app rename: - Change Account model's amount field to abalance - Change Wallet model's amount field to wbalance - Migrate piggyaccount models - Create a form to test Account model - Customize piggyaccount models in admin

--- a/piggyaccount/templates/piggyaccount/account.html
+++ b/piggyaccount/templates/piggyaccount/account.html
@@ -2,7 +2,16 @@
 {% load static %}
 
 {% block content %}
+<!-- Page name -->
     <h1 class="text-red-600">Account page</h1>
-    {{ account }}
+<!-- Form to test account model -->
+    <form method="POST" >
+
+        {% csrf_token %}
+        {{ form }}
+
+        <button type="submit">Create Account</button>
+    </form>
+<!-- Link to test Wallet page -->
     <a href="{% url 'wallet' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">Wallet</a>
 {% endblock %}
