--- a/profiles/templates/profile.html
+++ b/profiles/templates/profile.html
@@ -17,10 +17,22 @@
 Profile page
 {% user_display user as username %}
 <h2>My Profile - {{user.username|title}}</h2>
-<form class="mt-3 w-75" action="#" method="POST" id="profile-update-form">
+
+<!-- new form -->
+<form method="POST" class="mb-5 reservation-enquiry full-form">
+
+    {% csrf_token %}
+    {{ form }}
+
+    <button type="submit" class="button mt-4 text-center submit-button">Create Account</button>
+</form>
+
+<!--  -->
+
+<!-- <form class="mt-3 w-75" action="#" method="POST" id="profile-update-form">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="btn rounded text-uppercase float-right btn__update_rev">Update Information</button>
-</form>
+</form> -->
 {% endblock %}
 <hr>
