--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
               </h1>
               <div class="mx-auto mt-10 max-w-sm sm:flex sm:max-w-none sm:justify-center">
                 <div class="space-y-4 sm:mx-auto sm:inline-grid sm:grid-cols-2 sm:gap-5 sm:space-y-0">
-                  <a href="{% url 'piggyaccount' %}" class="flex items-center justify-center rounded-md border border-transparent bg-white px-4 py-3 text-base font-medium text-indigo-700 shadow-sm hover:bg-indigo-50 sm:px-8">Get started</a>
+                  <a href="{% url 'account_signup' %}" class="flex items-center justify-center rounded-md border border-transparent bg-white px-4 py-3 text-base font-medium text-indigo-700 shadow-sm hover:bg-indigo-50 sm:px-8">Get started</a>
                   <a href="{% url 'about' %}" class="flex items-center justify-center rounded-md border border-transparent bg-indigo-500 bg-opacity-60 px-4 py-3 text-base font-medium text-white shadow-sm hover:bg-opacity-70 sm:px-8">Live demo</a>
                 </div>
               </div>
@@ -50,7 +50,7 @@
                     </span>
                   </div>
                   <h3 class="mt-8 text-lg font-semibold leading-8 tracking-tight text-white">Safe Saving</h3>
-                  <p class="mt-5 text-base leading-7 text-white">Sky is blue</p>
+                  <p class="mt-5 text-base leading-7 text-white">Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</p>
                 </div>
               </div>
             </div>
