--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link rel="icon" type="image/png" href="{{ MEDIA_URL }} favicon.png">
+      <link rel="icon" type="image/png" href="{% static 'favicon/logo.png' %}">
   </head>
 <body>
   {% tailwind_css %}
@@ -17,8 +17,8 @@
       <div class="relative">
         <div class="mx-auto flex max-w-7xl items-center justify-between py-6 px-6 md:justify-start md:space-x-10 lg:px-8">
           <div class="flex justify-start lg:w-0 lg:flex-1">
-            <a href="#">
-              <img class="h-8 w-auto sm:h-10" src="media/favicon2.png" alt="logo" >
+            <a href="{% url 'index' %}">
+              <img class="h-8 w-auto sm:h-10" src="{% static 'favicon/logo.png' %}" alt="logo" >
             </a>
             <span class="mt-2 ml-5 text-lg">Piggy Bank</span>
           </div>
@@ -33,24 +33,19 @@
           </div>
           <nav class="hidden space-x-10 md:flex">
             <a href="{% url 'index' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">Home</a>
-  
             <a href="{% url 'about' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">About</a>
-
             <a href="{% url 'team' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">The Team</a>
-  
             <a href="{% url 'contact' %}" class="text-base font-medium text-gray-500 hover:text-gray-900">Contact US</a>
           </nav>
           <div class="hidden items-center justify-end md:flex md:flex-1 lg:w-0">
             {% if request.user.is_authenticated %}
-            {% if request.user.is_superuser %}
-            <a href="{% url 'profile' %}">My Profile</a>
-            <a href="{% url 'account_logout' %}" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Logout</a>
-          </div>
-          {% else %}
-          <a href="{% url 'account_signup' %}">Register</a>
-          <a href="{% url 'account_login' %}">Login</a>
-          {% endif %}
-          {% endif %}
+              <a href="{% url 'profile' %}" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">My Profile</a>
+              <a href="{% url 'account_logout' %}" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Logout</a>
+            {% else %}
+              <a href="{% url 'account_login' %}" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Sign in</a>
+              <a href="{% url 'account_signup' %}" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Sign up</a>
+            {% endif %}
+            </div>
         </div>
         <!--
           Mobile menu, show/hide based on mobile menu state.
@@ -67,12 +62,11 @@
             <div class="px-5 pt-5 pb-6">
               <div class="flex items-center justify-between">
                 <div>
-                  <img class="h-8 w-auto" src="media/piggy-bank.jpg" alt="piggy-bank">
+                  <img class="h-8 w-auto" src="media/logo.png" alt="logo">
                 </div>
                 <div class="-mr-2">
                   <button type="button" class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
                     <span class="sr-only">Close menu</span>
-                    <!-- Heroicon name: outline/x-mark -->
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
                       <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
                     </svg>
@@ -83,40 +77,36 @@
                 <nav class="grid grid-cols-1 gap-7">
                   <a href="{% url 'index' %}" class="-m-3 flex items-center rounded-lg p-3 hover:bg-gray-50">
                     <div class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-md bg-indigo-600 text-white">
-                      <!-- Heroicon name: outline/inbox -->
-                      <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 13.5h3.86a2.25 2.25 0 012.012 1.244l.256.512a2.25 2.25 0 002.013 1.244h3.218a2.25 2.25 0 002.013-1.244l.256-.512a2.25 2.25 0 012.013-1.244h3.859m-19.5.338V18a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 00-2.15-1.588H6.911a2.25 2.25 0 00-2.15 1.588L2.35 13.177a2.25 2.25 0 00-.1.661z" />
-                      </svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
+                      </svg>                      
                     </div>
                     <div class="ml-4 text-base font-medium text-gray-900">Home</div>
                   </a>
   
                   <a href="{% url 'about' %}" class="-m-3 flex items-center rounded-lg p-3 hover:bg-gray-50">
                     <div class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-md bg-indigo-600 text-white">
-                      <!-- Heroicon name: outline/chat-bubble-bottom-center-text -->
-                      <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 01.865-.501 48.172 48.172 0 003.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
-                      </svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
+                      </svg>                      
                     </div>
                     <div class="ml-4 text-base font-medium text-gray-900">About</div>
                   </a>
-
+  
                   <a href="{% url 'team' %}" class="-m-3 flex items-center rounded-lg p-3 hover:bg-gray-50">
                     <div class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-md bg-indigo-600 text-white">
-                      <!-- Heroicon name: outline/chat-bubble-bottom-center-text -->
-                      <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M7.5 8.25h9m-9 3H12m-9.75 1.51c0 1.6 1.123 2.994 2.707 3.227 1.129.166 2.27.293 3.423.379.35.026.67.21.865.501L12 21l2.755-4.133a1.14 1.14 0 01.865-.501 48.172 48.172 0 003.423-.379c1.584-.233 2.707-1.626 2.707-3.228V6.741c0-1.602-1.123-2.995-2.707-3.228A48.394 48.394 0 0012 3c-2.392 0-4.744.175-7.043.513C3.373 3.746 2.25 5.14 2.25 6.741v6.018z" />
-                      </svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M18 18.72a9.094 9.094 0 003.741-.479 3 3 0 00-4.682-2.72m.94 3.198l.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0112 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 016 18.719m12 0a5.971 5.971 0 00-.941-3.197m0 0A5.995 5.995 0 0012 12.75a5.995 5.995 0 00-5.058 2.772m0 0a3 3 0 00-4.681 2.72 8.986 8.986 0 003.74.477m.94-3.197a5.971 5.971 0 00-.94 3.197M15 6.75a3 3 0 11-6 0 3 3 0 016 0zm6 3a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0zm-13.5 0a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0z" />
+                      </svg>                      
                     </div>
                     <div class="ml-4 text-base font-medium text-gray-900">The Team</div>
                   </a>
   
                   <a href="{% url 'contact' %}" class="-m-3 flex items-center rounded-lg p-3 hover:bg-gray-50">
                     <div class="flex h-10 w-10 flex-shrink-0 items-center justify-center rounded-md bg-indigo-600 text-white">
-                      <!-- Heroicon name: outline/chat-bubble-left-right -->
-                      <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 8.511c.884.284 1.5 1.128 1.5 2.097v4.286c0 1.136-.847 2.1-1.98 2.193-.34.027-.68.052-1.02.072v3.091l-3-3c-1.354 0-2.694-.055-4.02-.163a2.115 2.115 0 01-.825-.242m9.345-8.334a2.126 2.126 0 00-.476-.095 48.64 48.64 0 00-8.048 0c-1.131.094-1.976 1.057-1.976 2.192v4.286c0 .837.46 1.58 1.155 1.951m9.345-8.334V6.637c0-1.621-1.152-3.026-2.76-3.235A48.455 48.455 0 0011.25 3c-2.115 0-4.198.137-6.24.402-1.608.209-2.76 1.614-2.76 3.235v6.226c0 1.621 1.152 3.026 2.76 3.235.577.075 1.157.14 1.74.194V21l4.155-4.155" />
-                      </svg>
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 3.75H6.912a2.25 2.25 0 00-2.15 1.588L2.35 13.177a2.25 2.25 0 00-.1.661V18a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 00-2.15-1.588H15M2.25 13.5h3.86a2.25 2.25 0 012.012 1.244l.256.512a2.25 2.25 0 002.013 1.244h3.218a2.25 2.25 0 002.013-1.244l.256-.512a2.25 2.25 0 012.013-1.244h3.859M12 3v8.25m0 0l-3-3m3 3l3-3" />
+                      </svg>                      
                     </div>
                     <div class="ml-4 text-base font-medium text-gray-900">Contact</div>
                   </a>
@@ -124,19 +114,13 @@
               </div>
             </div>
             <div class="py-6 px-5">
-            
               <div class="mt-6">
                 {% if request.user.is_authenticated %}
-                {% if request.user.is_superuser %}
-                <a href="{% url 'profile' %}" class="text-gray-900">My Profile</a>
-                <a href="{% url 'account_logout' %}" class="text-gray-900">Logout</a>
+                  <a href="{% url 'profile' %}" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">My Profile</a>
+                  <a href="{% url 'account_logout' %}" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Logout</a>
                 {% else %}
-                <a href="{% url 'account_signup' %}" class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Sign up</a>
-                <p class="mt-6 text-center text-base font-medium text-gray-500">
-                  Existing customer?
-                  <a href="{% url 'account_login' %}" class="text-gray-900">Sign in</a>
-                </p>
-                {% endif %}
+                  <a href="{% url 'account_login' %}" class="flex mt-10 w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Sign in</a>
+                  <a href="{% url 'account_signup' %}" class="flex w-full items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700">Sign up</a>
                 {% endif %}
               </div>
             </div>
