added rest of sites content

--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -33,7 +33,7 @@
             <div class="mx-auto max-w-md text-center sm:max-w-3xl lg:max-w-7xl lg:px-8 mb-20">
               <h2 class="text-xl">Piggy Bank</h2>
               <p class="mt-2 text-3xl font-bold tracking-tight">Contact piggy bank</p>
-              <p class="mx-auto mt-5 max-w-prose text-xl mb-20">Phasellus lorem quam molestie id quisque diam aenean nulla in. Accumsan in quis quis nunc, ullamcorper malesuada. Eleifend condimentum id viverra nulla.</p>
+              <p class="mx-auto mt-5 max-w-prose text-xl mb-20">"Please don't hesitate to contact us if you have any questions or concerns - we're here to help!".</p>
             </div>
           
             <div class="w-2/3 mt-24 px-8 grid gap-8 grid-cols-1 md:grid-cols-2 md:px-12 lg:px-16 xl:px-32 py-16 mx-auto bg-gray-800 border border-white text-white rounded-lg shadow-lg">
