--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -35,7 +35,7 @@
       <div class="mx-auto max-w-md px-6 text-center sm:max-w-3xl lg:max-w-7xl lg:px-8">
         <h2 class="text-xl">Piggy Bank</h2>
         <p class="mt-2 text-3xl font-bold tracking-tight">A Safe Way to Save</p>
-        <p class="mx-auto mt-5 max-w-prose text-xl">Feel Safe by saving your money with piggy bank we make sure your security is top priority</p>
+        <p class="mx-auto mt-5 max-w-prose text-xl">"Want to reach your savings goals faster? Our money saving app is here to help you save safely and easily. With our app, you can set up automatic savings, create a budget, and track your progress all in one place. Download now and start saving safely today."</p>
         <div class="mt-20">
           <div class="grid grid-cols-1 gap-12 sm:grid-cols-2 lg:grid-cols-3">
             <div class="pt-6">
@@ -50,7 +50,7 @@
                     </span>
                   </div>
                   <h3 class="mt-8 text-lg font-semibold leading-8 tracking-tight text-white">Safe Saving</h3>
-                  <p class="mt-5 text-base leading-7 text-white">Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</p>
+                  <p class="mt-5 text-base leading-7 text-white">"Our app offers a secure platform for safe saving with 2FA, ensuring that your money is protected and easily accessible."</p>
                 </div>
               </div>
             </div>
@@ -67,7 +67,7 @@
                     </span>
                   </div>
                   <h3 class="mt-8 text-lg font-semibold leading-8 tracking-tight text-white">No hidden fees</h3>
-                  <p class="mt-5 text-base leading-7 text-white">Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</p>
+                  <p class="mt-5 text-base leading-7 text-white">"Our app is completely transparent, so you'll never have to worry about hidden fees or unexpected charges.</p>
                 </div>
               </div>
             </div>
@@ -84,7 +84,7 @@
                     </span>
                   </div>
                   <h3 class="mt-8 text-lg font-semibold leading-8 tracking-tight text-white">Instant transfers</h3>
-                  <p class="mt-5 text-base leading-7 text-white">Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</p>
+                  <p class="mt-5 text-base leading-7 text-white">"Experience the convenience of instant transfers with our app and say goodbye to long wait times to save your money."</p>
                 </div>
               </div>
             </div>
