--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -33,7 +33,7 @@
           <div class="mx-auto max-w-md text-center sm:max-w-3xl lg:max-w-7xl lg:px-8 mb-20">
             <h2 class="text-xl">Piggy Bank</h2>
             <p class="mt-2 text-3xl font-bold tracking-tight">How to use piggy bank</p>
-            <p class="mx-auto mt-5 max-w-prose text-xl mb-20">Phasellus lorem quam molestie id quisque diam aenean nulla in. Accumsan in quis quis nunc, ullamcorper malesuada. Eleifend condimentum id viverra nulla.</p>
+            <p class="mx-auto mt-5 max-w-prose text-xl mb-20">Using our piggy bank app is easy! Follow these simple steps</p>
           <div>
             <div class="grid grid-cols-1 gap-12 sm:grid-cols-2 lg:grid-cols-3">
               <div class="pt-6">
@@ -48,7 +48,7 @@
                       </span>
                     </div>
                     <h3 class="mt-8 text-lg font-semibold leading-8 tracking-tight text-white">Step One</h3>
-                    <p class="mt-5 text-base leading-7 text-white">Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</p>
+                    <p class="mt-5 text-base leading-7 text-white">Start by creating an account in the top right corner with the sign up button.</p>
                   </div>
                 </div>
               </div>
@@ -65,7 +65,7 @@
                       </span>
                     </div>
                     <h3 class="mt-8 text-lg font-semibold leading-8 tracking-tight text-white">Step Two</h3>
-                    <p class="mt-5 text-base leading-7 text-white">Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</p>
+                    <p class="mt-5 text-base leading-7 text-white">Secure your account with 2FA, Make sure to scan the QR code on your phone with the Google authenticator app.</p>
                   </div>
                 </div>
               </div>
@@ -82,7 +82,7 @@
                       </span>
                     </div>
                     <h3 class="mt-8 text-lg font-semibold leading-8 tracking-tight text-white">Step Three</h3>
-                    <p class="mt-5 text-base leading-7 text-white">Ac tincidunt sapien vehicula erat auctor pellentesque rhoncus. Et magna sit morbi lobortis.</p>
+                    <p class="mt-5 text-base leading-7 text-white">Once 2FA is set up and you are logged in you can click on my profile next to the log out button and start saving for nice things.</p>
                   </div>
                 </div>
               </div>
