--- a/home/templates/home/team.html
+++ b/home/templates/home/team.html
@@ -98,7 +98,7 @@
               </li>
               <li class="rounded-lg bg-gray-800 py-10 px-6 text-center xl:px-10 xl:text-left">
                 <div class="space-y-6 xl:space-y-10">
-                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="https://images.unsplash.com/photo-1519345182560-3f2917c472ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80" alt="">
+                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="../media/Avatar.jpg" alt="ChrisT-image" >
                   <div class="space-y-2 xl:flex xl:items-center xl:justify-between">
                     <div class="space-y-1 text-lg font-medium leading-6">
                       <h3 class="text-white">ChrisT</h3>
@@ -120,7 +120,7 @@
               </li>
               <li class="rounded-lg bg-gray-800 py-10 px-6 text-center xl:px-10 xl:text-left">
                 <div class="space-y-6 xl:space-y-10">
-                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="https://images.unsplash.com/photo-1519345182560-3f2917c472ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80" alt="">
+                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="../media/Avatar.jpg" alt="valerie-image"/>
                   <div class="space-y-2 xl:flex xl:items-center xl:justify-between">
                     <div class="space-y-1 text-lg font-medium leading-6">
                       <h3 class="text-white">Valerie oni</h3>
@@ -137,7 +137,7 @@
                           </a>
                       </li>
                       <li>
-                        <a href="#" class="text-gray-400 hover:text-gray-300">
+                        <a href="https://www.linkedin.com/in/valerieiyomieju/" class="text-gray-400 hover:text-gray-300">
                           <span class="sr-only">LinkedIn</span>
                           <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
                             <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd" />
@@ -150,7 +150,7 @@
               </li>
               <li class="rounded-lg bg-gray-800 py-10 px-6 text-center xl:px-10 xl:text-left">
                 <div class="space-y-6 xl:space-y-10">
-                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="../media/kayla.png" alt="Kayla">
+                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="../media/kayla.png" alt="Kayla" />
                   <div class="space-y-2 xl:flex xl:items-center xl:justify-between">
                     <div class="space-y-1 text-lg font-medium leading-6">
                       <h3 class="text-white">Kayla Smith</h3>
@@ -167,7 +167,7 @@
                         </a>
                       </li>
                       <li>
-                        <a target="_blank" href="#" class="text-gray-400 hover:text-gray-300">
+                        <a target="_blank" href="https://www.linkedin.com/in/kayla-smith-ab1595101/" class="text-gray-400 hover:text-gray-300">
                           <span class="sr-only">LinkedIn</span>
                           <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
                             <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd" />
@@ -180,7 +180,7 @@
               </li>
               <li class="rounded-lg bg-gray-800 py-10 px-6 text-center xl:px-10 xl:text-left">
                 <div class="space-y-6 xl:space-y-10">
-                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="https://images.unsplash.com/photo-1519345182560-3f2917c472ef?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80" alt="lauren">
+                  <img class="mx-auto h-40 w-40 rounded-full xl:h-56 xl:w-56" src="../media/lauren.jpeg" alt="lauren" />
                   <div class="space-y-2 xl:flex xl:items-center xl:justify-between">
                     <div class="space-y-1 text-lg font-medium leading-6">
                       <h3 class="text-white">Lauren Pechey</h3>
@@ -189,7 +189,7 @@
       
                     <ul role="list" class="flex justify-center space-x-5">
                       <li>
-                        <a target="_blank" href="#" class="text-gray-400 hover:text-gray-500">
+                        <a target="_blank" href="https://www.linkedin.com/in/laurenpecheysoftwaredeveloper/" class="text-gray-400 hover:text-gray-500">
                             <span class="sr-only">GitHub</span>
                             <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                               <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" />
@@ -197,7 +197,7 @@
                         </a>
                       </li>
                       <li>
-                        <a target="_blank" href="#" class="text-gray-400 hover:text-gray-300">
+                        <a target="_blank" href="https://www.linkedin.com/in/martina-grganic/" class="text-gray-400 hover:text-gray-300">
                           <span class="sr-only">LinkedIn</span>
                           <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
                             <path fill-rule="evenodd" d="M16.338 16.338H13.67V12.16c0-.995-.017-2.277-1.387-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248H8.014v-8.59h2.559v1.174h.037c.356-.675 1.227-1.387 2.526-1.387 2.703 0 3.203 1.778 3.203 4.092v4.711zM5.005 6.575a1.548 1.548 0 11-.003-3.096 1.548 1.548 0 01.003 3.096zm-1.337 9.763H6.34v-8.59H3.667v8.59zM17.668 1H2.328C1.595 1 1 1.581 1 2.298v15.403C1 18.418 1.595 19 2.328 19h15.34c.734 0 1.332-.582 1.332-1.299V2.298C19 1.581 18.402 1 17.668 1z" clip-rule="evenodd" />
