--- a/templates/base.html
+++ b/templates/base.html
@@ -166,7 +166,8 @@
         <p class="mt-10 text-center text-xs leading-5 text-gray-500">&copy; 2023 Piggy Bank, Inc. All rights reserved.</p>
       </div>
     </footer>    
+    <!-- Custom JS -->
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
-<footer>
-</footer>
+</html>
 
